--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <canvas id="splineCanvas"></canvas>
 
     <script type="module">
-      import { Application } from 'https://cdn.skypack.dev/@splinetool/runtime';
+      import { Application } from "https://cdn.jsdelivr.net/npm/@splinetool/runtime@latest/build/runtime.js";
+
 
       const canvas = document.getElementById('splineCanvas');
       window.splineApp = new Application(canvas);
